fix scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   margin: 0;
   display: flex;
